2002-02-08  Alexandre Oliva  <aoliva@redhat.com>

	Contribute sh64-elf.
	2002-02-01  Alexandre Oliva  <aoliva@redhat.com>
	* gas/sh/sh64/syntax-1.s: Remove `-4' from @(expr-4,pc).
	2002-01-28  Alexandre Oliva  <aoliva@redhat.com>
	* gas/sh/sh64/crange1-1.d: Formatting changes to match the current
	output of objdump.
	* gas/sh/sh64/crange1-2.d: Likewise.
	* gas/sh/sh64/crange2-2.d: Likewise.
	* gas/sh/sh64/crange3-1.d: Likewise.
	* gas/sh/sh64/crange4-1.d: Likewise.
	* gas/sh/sh64/datal-2.d: Likewise.
	* gas/sh/sh64/datal32-1.d: Likewise.
	* gas/sh/sh64/datal32-3.d: Likewise.
	* gas/sh/sh64/localcom-1.d: Likewise.
	* gas/sh/sh64/mix-1.d: Likewise.
	* gas/sh/sh64/pt32-1.d: Likewise.
	* gas/sh/sh64/rel32-1.d: Likewise.
	* gas/sh/sh64/rel32-2.d: Likewise.
	* gas/sh/sh64/rel32-3.d: Likewise.
	* gas/sh/sh64/rel32-4.d: Likewise.
	* gas/sh/sh64/rel32-5.d: Likewise.
	* gas/sh/sh64/ua32-1.d: Likewise.
	2001-03-14  DJ Delorie	<dj@redhat.com>
	* gas/sh/sh64/endian-1.d: New test - Little Endianness.
	* gas/sh/sh64/endian-1.s: New test - Little Endianness.
	* gas/sh/sh64/endian-2.d: New test - Big Endianness.
	* gas/sh/sh64/endian-2.s: New test - Big Endianness.
	2001-03-12  DJ Delorie	<dj@redhat.com>
	* gas/sh/sh64/syntax-1.d: New test - basic syntax.
	* gas/sh/sh64/syntax-1.s: New test - basic syntax.
	* gas/sh/sh64/syntax-2.d: New test - basic syntax, pseudos.
	* gas/sh/sh64/syntax-2.s: New test - basic syntax, pseudos.
	2001-03-06  DJ Delorie	<dj@redhat.com>
	* gas/sh/sh64/lineno.d: New, test dwarf2 line numbers vs macros.
	* gas/sh/sh64/lineno.s: Ditto.
	2001-01-14  Hans-Peter Nilsson	<hpn@cygnus.com>
	* gas/sh/sh64/err-dsp.s: New test.
	2001-01-13  Hans-Peter Nilsson	<hpn@cygnus.com>
	* gas/sh/sh64/err-abi-64.s, gas/sh/sh64/err-abi-32.s,
	gas/sh/sh64/abi-64.s, gas/sh/sh64/abi-64.d, gas/sh/sh64/abi-32.s,
	gas/sh/sh64/abi-32.d, gas/sh/sh64/crange3.s,
	gas/sh/sh64/crange3-1.d, gas/sh/sh64/crange4.s,
	gas/sh/sh64/crange4-1.d, gas/sh/sh64/crange5.s,