@@ -1,3 +1,9 @@
+2002-02-08  Chris Demetriou  <cgd@broadcom.com>
+
+	* gas/mips/mips.exp: Document (but do not XFAIL) currently-failing
+	MIPS ECOFF tests, providing what information is known about
+	the origins of the failures.
+
 2002-02-08  Alexandre Oliva  <aoliva@redhat.com>
 
 	Contribute sh64-elf.
